tests/baselines/reference/parservoidInQualifiedName1.errors.txt
==== tests/cases/compiler/parservoidInQualifiedName1.ts (1 errors) ====
    var v : void.x;
                ~
!!! parservoidInQualifiedName1.ts(1,13): error TS1005: ',' expected.